# Shazam-replica

./: .dockerignore  Dockerfile  README.md  data.dvc  experiments.ipynb  main.py  pyproject.toml
experiment/: phase2_constellation.py  phase3_hashing.py  phase4_database.py  phase5_matching.py  song_metadata.json
templates/: index.html
utils/: audio_utils.py  config.py  database.py  fingerprint.py  logging_config.py  matcher.py  simplified.py  song_metadata.json  visualize.py
