[project]
name = "shazam-replica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "dvc>=3.64.2",
    "ipykernel>=7.1.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pathlib>=1.0.1",
    "pydub>=0.25.1",
    "scipy>=1.16.3",
    "sounddevice>=0.5.3",
]
